config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: auth-ui
    app.kubernetes.io/name: auth-ui
    app.kubernetes.io/version: 1.0.0
  name: auth-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: auth-ui
      app.kubernetes.io/name: auth-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: auth-ui
        app.kubernetes.io/name: auth-ui
    spec:
      containers:
        - name: auth-ui
          image: ghcr.io/datum-cloud/auth-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            # TODO: Specify resource requests
            limits:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              path: /ui/v2/login/healthy
              port: 3000
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              path: /ui/v2/login/healthy
              port: 3000
              scheme: HTTP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
