config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: auth-ui
    app.kubernetes.io/name: auth-ui
    app.kubernetes.io/version: 1.0.0
  name: auth-ui
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: auth-ui
    app.kubernetes.io/name: auth-ui
  sessionAffinity: None
  type: ClusterIP
